--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -14,17 +14,15 @@ jobs:
     name:    Run Cypress Tests
     runs-on: windows-latest
     
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x, 20.x]
+   
 
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm ci
+          node-version: 18.16.0
+      - run: npm install
       - run: npm run build --if-present
       - run: npm test
     
