--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.16.0
-      - run: npm install
+      - run: npm ci
       - run: npm run build --if-present
       
       - name: Install Cypress Tests
