--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -29,7 +29,7 @@ jobs:
         run : npm install cypress
 
             
-      - name: Run Cypress Tests
+      - name: Run Cypress Test
         run : npx cypress run
       
       
