--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -1,45 +1,36 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Generate Cypress Report
-
+name: Create Cypress report
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+    branches:
+      - 'master'
 jobs:
-  build:
-    name:    Run Cypress Tests
-    runs-on: windows-latest
-     
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.16.0
-      - run: npm ci
-      - run: npm run build --if-present
-      
-      - name: Install Cypress Tests
-        run : npm install cypress
-
-            
-      - name: Run Cypress Test
-        run : npx cypress run
-        
-      - name: Copy test execution videos
-        run: |
-          mkdir public
-          cp -r cypress/videos public/videos
-      
-      
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
-                
+ cypress-e2e-chrome81:
+  name: Run on Chrome 
+  runs-on: ubuntu-18.04
+  container: cypress/browsers:node12.16.2-chrome81-ff75
+  steps:
+    - uses: actions/checkout@v2
+    - name: Install a project with a clean slate
+      run: |
+        npm ci
+        $(npm bin)/cypress cache path
+        $(npm bin)/cypress cache list
+        $(npm bin)/cypress verify
+    - name: Run Cypress tests
+      run: npm run test:chrome
+      continue-on-error: true
+    - name: Copy test execution videos
+      run: |
+        mkdir public
+        cp -r cypress/videos public/videos
+    - name: Merge test results into one
+      run: npm run report:merge
+    - name: Generate HTML report
+      run: npm run report:generate
+    - name: Deploy report page
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./public
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
