--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "This is the initial script",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "test:chrome": "cypress run --browser chrome",
+    "report:merge": "mochawesome-merge cypress/results/json/*.json > index.json",
+    "report:generate": "marge index.json --reportDir public --assetsDir public/assets --reportPageTitle index.html"
   },
   "author": "Ramya.A",
   "license": "ISC",
@@ -13,13 +16,12 @@
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "cypress": "^12.14.0",
+    "cypress-multi-reporters": "^1.6.3",
     "eslint": "^8.42.0",
     "mocha": "^10.2.0",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0",
     "typescript": "5.0"
   }
-  "scripts": {
-  "test:chrome": "cypress run --browser chrome"
-}
 }
