--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -2,7 +2,7 @@ name: Create Cypress reports
 on:
   push:
     branches:
-      - 'master'
+      - 'main'
 jobs:
  cypress-e2e-chrome81:
   name: Run on Chrome 
