--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -2,13 +2,11 @@ name: Create Cypress reports
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 jobs:
  cypress-e2e-chrome81:
   name: Run on Chrome 
-  runs-on: ubuntu-18.04
-  container: cypress/browsers:node12.16.2-chrome81-ff75
+  runs-on: ubuntu-21.04
+  container: node-18.16.0-chrome-113.0.5672.92-1-ff-113.0
   steps:
     - uses: actions/checkout@v2
     - name: Install a project with a clean slate
