--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -3,10 +3,10 @@ on:
   push:
     branches: [ "main" ]
 jobs:
- cypress-e2e-chrome81:
+ cypress-e2e-chrome113:
   name: Run on Chrome 
   runs-on: ubuntu-latest
-  container: node-18.16.0-chrome-113.0.5672.92-1-ff-113.0-edge-113.0.1774.35-1
+  container: node-18.16.0-chrome-113.0.5672.92-1-ff-113.0
   steps:
     - uses: actions/checkout@v2
     - name: Install a project with a clean slate
