--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ "main" ]
 jobs:
- cypress-test:
+ cypress-run:
   name: Run on Chrome 
   runs-on: ubuntu-latest
   container: cypress/browsers:node-18.16.0-chrome-113.0.5672.92-1-ff-113.0-edge-113.0.1774.35-1
